FLUID-6008: fix button contrast hover state.

--- a/src/components/uploader/css/Uploader.css
+++ b/src/components/uploader/css/Uploader.css
@@ -324,7 +324,7 @@ html>body .fl-uploader span.fl-uploader-browse {
 }
 
 .fl-uploader-buttons .fl-uploader-button-upload:hover {
-    background-color: #519325;
+    background-color: #438600;
     border-color: #142B8C;
 }
 
